--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lmstudio/sdk": "^0.0.12",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "openai": "^4.52.3"
   },
   "devDependencies": {
