--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth0/angular-jwt": "^5.2.0",
     "@lmstudio/sdk": "^0.0.12",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "openai": "^4.52.3"
   },
