--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@angular/cdk": "^18.1.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@lmstudio/sdk": "^0.0.12",
     "axios": "^1.7.2",
