--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "loadData": "node src/utils/InitialDataLoad.mjs",
     "devStart": "nodemon src/server.mjs",
-    "start": "node src/server.mjs"
+    "start": "node src/server.mjs",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@angular/cdk": "^18.1.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@lmstudio/sdk": "^0.0.12",
+    "@types/jest": "^29.5.12",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -27,6 +29,11 @@
     "openai": "^4.52.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/node": "^7.25.0",
+    "@babel/preset-env": "^7.25.3",
+    "@shelf/jest-mongodb": "^4.3.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
