--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.25.3",
     "@shelf/jest-mongodb": "^4.3.2",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "path-browserify": "^1.0.1"
   }
 }
