Update openai model to use new structured output feature

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "openai": "^4.52.3"
+    "openai": "^4.57.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
